[Update] create-tournament view updated
Routing module updated
Bootstrap, ng material and mobiscroll added

--- a/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
+++ b/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
@@ -1,1 +1,17 @@
-<p>tournaments works!</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <!---Referencia al archivo css que contiene el estilo--->
+    <link rel="stylesheet" href="tournaments.component.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+<!---Componentes que conforman la seccion de crear un torneo--->
+<app-navbar></app-navbar>
+<body>
+  <div class="button">
+    <input type="submit" value="Crear Torneo"   routerLink="/create-tournaments">
+  </div>
+</body>
+</html>
+
