--- a/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
+++ b/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
@@ -6,12 +6,21 @@
     <link rel="stylesheet" href="tournaments.component.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<!---Componentes que conforman la seccion de crear un torneo--->
+<!---Componentes que conforman la seccion de ver todos los torneos--->
 <app-navbar></app-navbar>
+<div class="input-box">
+  <div class="title">Todos los torneos</div>
+  <input  type="submit" value="Crear Torneo" routerLink="/create-tournaments">
+</div>
 <body>
-  <div class="button">
-    <input type="submit" value="Crear Torneo"   routerLink="/create-tournaments">
+  <div class="container">
+    <div class="content">
+        <div class="button">
+          <input type="submit" value="Ver Torneo"   routerLink="/tournament-details">
+        </div>
+    </div>
   </div>
 </body>
 </html>
+
 
