--- a/WCO_WEB/WCO/src/app/components/matches/matches.component.html
+++ b/WCO_WEB/WCO/src/app/components/matches/matches.component.html
@@ -1,1 +1,108 @@
-<p>matches works!</p>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>WCO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="matches.component.css">
+</head>
+    <body>
+        <header>
+            <h2>WCO...</h2>
+                
+            <div class="line-1"></div>
+        </header>
+        <main>
+            <div class="testbox">
+                <form action="/">
+                  <div class="banner">
+                    <h1>Crear partido</h1>
+                  </div>
+                  <div class="colums">
+                    <div class="item">
+                        <h3>Torneo: Nombre del torneo</h3>
+                    </div>
+                    <div class="item">
+                        <h3>Fase: Nombre de la fase</h3>
+                    </div>
+                    <div class="item">
+                      <label for="sede">Sede del partido<span>*</span></label><br>
+                      <input id="sede" type="text" name="sede" placeholder="Ingrese sede del partido" required/>
+                    </div>
+                    <div class="item">
+                      <label for="inicio">Fecha y hora de inicio<span>*</span></label><br>
+                      <input id="inicio" type="datetime-local" name="inicio" required/>
+                    </div>
+                    <div class="item">
+                        <label for="equipo1">Equipo 1<span>*</span></label><br>
+                        <select name="equipo1" id="equipo1" placeholder="Seleccione equipo 1">
+                            <option value="1">Brasil</option>
+                            <option value="2">Costa Rica</option>
+                            <option value="3">Canadá</option>
+                        </select>
+                    </div>
+                    <div class="item">
+                        <label for="equipo2">Equipo 2<span>*</span></label><br>
+                        <select name="equipo2" id="equipo2" placeholder="Seleccione equipo 2">
+                            <option value="1">Croacia</option>
+                            <option value="2">España</option>
+                            <option value="3">Senegal</option>
+                        </select>
+                    
+                    </div>
+                    
+                  </div>
+                  <div class="btn-block">
+                    <button type="submit" href="/">Agregar partido</button>
+                  </div>
+                </form>
+            </div>
+        </main>
+        <footer>
+
+        </footer>
+        
+</body>
+</html>
+
+<!-- 
+            <div class="container">
+             
+                <div class="title">Crear partido</div>
+                
+                <div class="content">
+                    <form action="#">
+                        <div class="matches-form">
+                            <div class="input-sede">
+                                <span >Sede del partido <span style="color: rgb(245, 59, 59);">*</span> </span>
+                                <input type="text"  placeholder="Ingrese la sede del torneo " required>
+                            </div>
+    
+                            <div class="input-sede">
+                                <span >Fecha y hora de inicio <span style="color: rgb(245, 59, 59);">*</span> </span>
+                                <input type="datetime-local"  placeholder="Ingrese la hora de inicio del partido" required>
+                            </div>
+    
+                            <div>
+                                    <span >Equipo 1 <span style="color: rgb(245, 59, 59);">*</span> </span>
+                                    <select name="team1" id="team1" placeholder="Seleccione equipo 1">
+                                        <option value="1">Brasil</option>
+                                        <option value="2">Costa Rica</option>
+                                        <option value="3">Canadá</option>
+                                    </select>
+                            </div>
+                            <div>
+                                    <span>Equipo 2 <span style="color: rgb(245, 59, 59);">*</span> </span>
+                                    <select name="team2" id="team2" placeholder="Seleccione equipo 2">
+                                        <option value="1">Croacia</option>
+                                        <option value="2">España</option>
+                                        <option value="3">Senegal</option>
+                                    </select>
+                              
+                            </div>
+                        </div>
+                        <div class="button">
+                            <input type="submit" value="Crear partido"  routerLink="">
+                        </div>
+                    </form>
+                </div>
+            </div> -->
