--- a/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
+++ b/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
@@ -15,9 +15,23 @@
 <body>
   <div class="container">
     <div class="content">
-        <div class="button">
-          <input type="submit" value="Ver Torneo"   routerLink="/tournament-details">
-        </div>
+
+      <table class="table table-bordered mt-4 mytable">
+        <tr class="table-primary mytable">
+          <th>Nombre del Torneo</th>
+          <th>ID</th>
+          <th>Fecha de inicio</th>
+          <th>Fecha de final</th>
+          <th>Detalles</th>
+        </tr>
+      <tr *ngFor="let data of tournamentsData2">
+        <td>{{data.name}}</td>
+          <td>{{data.id}}</td>
+          <td>{{data.startDate}}</td>
+          <td>{{data.endDate}}</td>
+          <td><button routerLink="/tournament-details" >Ver Torneo</button></td>
+      </tr>
+      </table>
     </div>
   </div>
 </body>
