--- a/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.css
+++ b/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.css
@@ -47,4 +47,38 @@ body{
   background: linear-gradient(135deg, #1277D9, #7bb0e6, #1277D9);
 }
 
+.viewbtn{
+  margin-left: 20%;
+  font-size: 17px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+  color: white;
+  background: linear-gradient(135deg, #1277D9, #7bb0e6, #1277D9);
+}
+
+#tournaments {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#tournaments td, #tournaments th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#tournaments tr:nth-child(even){background-color: #f2f2f2;}
+
+#tournaments tr:hover {background-color: #ddd;}
+
+#tournaments th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #1277D9;
+  color: white;
+  text-align: center;
+}
 
