--- a/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
+++ b/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="content">
 
-      <table class="table table-bordered mt-4 mytable">
+      <table id="tournaments" class="table table-bordered mt-4 mytable">
         <tr class="table-primary mytable">
           <th>Nombre del Torneo</th>
           <th>ID</th>
@@ -24,12 +24,12 @@
           <th>Fecha de final</th>
           <th>Detalles</th>
         </tr>
-      <tr *ngFor="let data of tournamentsData2">
+      <tr *ngFor="let data of tournamentsData">
         <td>{{data.name}}</td>
           <td>{{data.id}}</td>
           <td>{{data.startDate}}</td>
           <td>{{data.endDate}}</td>
-          <td><button routerLink="/tournament-details" >Ver Torneo</button></td>
+          <td><button class="viewbtn" routerLink="/tournament-details" (click)="openTournament(data.id)" >Ver Torneo</button></td>
       </tr>
       </table>
     </div>
