--- a/WCO_WEB/WCO/src/app/components/matches/matches.component.html
+++ b/WCO_WEB/WCO/src/app/components/matches/matches.component.html
@@ -26,15 +26,15 @@
                     </div>
                     <div class="item">
                       <label for="sede">Sede del partido<span>*</span></label><br>
-                      <input id="sede" type="text" name="sede" placeholder="Ingrese sede del partido" required/>
+                      <input  class="form-control" id="sede" type="text" name="sede" [(ngModel)]="newMatch.venue" [ngModelOptions]="{standalone: true}" placeholder="Ingrese sede del partido" required/>
                     </div>
                     <div class="item">
                       <label for="inicio">Fecha y hora de inicio<span>*</span></label><br>
-                      <input id="inicio" type="datetime-local" name="inicio" required/>
+                      <input class="form-control" id="inicio" type="datetime-local" [(ngModel)]="newMatch.startDate" [ngModelOptions]="{standalone: true}" name="inicio" required/>
                     </div>
                     <div class="item">
                         <label for="equipo1">Equipo 1<span>*</span></label><br>
-                        <select name="equipo1" id="equipo1" placeholder="Seleccione equipo 1">
+                        <select class="form-control" type="text" name="equipo1" id="equipo1" [(ngModel)]="newMatch.team1" [ngModelOptions]="{standalone: true}"  placeholder="Seleccione equipo 1">
                             <option value="1">Brasil</option>
                             <option value="2">Costa Rica</option>
                             <option value="3">Canadá</option>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="item">
                         <label for="equipo2">Equipo 2<span>*</span></label><br>
-                        <select name="equipo2" id="equipo2" placeholder="Seleccione equipo 2">
+                        <select class="form-control" type="text" name="equipo2" [(ngModel)]="newMatch.team2" [ngModelOptions]="{standalone: true}" id="equipo2" placeholder="Seleccione equipo 2">
                             <option value="1">Croacia</option>
                             <option value="2">España</option>
                             <option value="3">Senegal</option>
@@ -52,7 +52,7 @@
                     
                   </div>
                   <div class="btn-block">
-                    <button type="submit" href="/">Agregar partido</button>
+                    <button class="form-control" (click)="insertMatch(newMatch)" type="submit" >Agregar partido</button>
                   </div>
                 </form>
             </div>
