[Update] Some bugs fixed
Integration with API

--- a/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
+++ b/WCO_WEB/WCO/src/app/components/tournaments/tournaments.component.html
@@ -26,10 +26,10 @@
         </tr>
       <tr *ngFor="let data of tournamentsData">
         <td>{{data.name}}</td>
-          <td>{{data.id}}</td>
+          <td>{{data.toId}}</td>
           <td>{{data.startDate}}</td>
           <td>{{data.endDate}}</td>
-          <td><button class="viewbtn" routerLink="/tournament-details" (click)="openTournament(data.id)" >Ver Torneo</button></td>
+          <td><button class="viewbtn" routerLink="/tournament-details" (click)="openTournament(data.toId)" >Ver Torneo</button></td>
       </tr>
       </table>
     </div>
