--- a/WCO_WEB/WCO/src/app/components/tournament-details/tournament-details.component.css
+++ b/WCO_WEB/WCO/src/app/components/tournament-details/tournament-details.component.css
@@ -1,12 +1,13 @@
 body{
-  height: 100vh;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   background-color: white;
+  height: auto;
+  min-height: 100%;
 
 }
 .container{
+  height: auto;
   max-width: 1700px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.295);
