--- a/WCO_WEB/WCO/src/app/components/tournament-details/tournament-details.component.html
+++ b/WCO_WEB/WCO/src/app/components/tournament-details/tournament-details.component.html
@@ -7,22 +7,29 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <!---Componentes que conforman la seccion de ver los detalles de un torneo--->
-<app-navbar></app-navbar>
-<div *ngFor="let data of tournamentsData">
-  <div class="title">{{data.name}}</div>
-  <div class="subtitle">{{data.startDate}} - {{data.endDate}}  Tipo de torneo: {{data.type}}</div>
-</div>
 
 <body>
+  <app-navbar></app-navbar>
+  <br>
+  <br>
+  <br>
+  <div *ngFor="let data of tournamentsData">
+    <div class="title">{{data.name}}</div>
+    <div class="subtitle">{{data.startDate}} - {{data.endDate}} &nbsp;&nbsp;&nbsp;&nbsp;   Tipo de torneo: {{data.type}}</div>
+    <br>
+  </div>
   <div class="container">
     <div class="content">
-      <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
-        <ngb-panel *ngFor="let bracket of bracketsData">
-          <ng-template ngbPanelTitle class="bracket-title">
+      <ngb-accordion *ngFor="let bracket of bracketsData"  #acc="ngbAccordion" [closeOthers]="true" (panelChange)='openBracket($event, bracket)'>
+        <ngb-panel>
+          <ng-template ngbPanelTitle class="bracket-title" >
             <span>{{bracket.name}}</span>
           </ng-template>
-          <ng-template ngbPanelContent>
-            <input class="create-match-btn" type="button"  value="+ Agregar Partido" routerLink="" >
+          <ng-template  ngbPanelContent>
+            <div *ngFor="let match of matchData">
+              <span>{{match.teams[0].name}}  VS {{match.teams[1].name}}  Sede: {{match.venue}} Horario: {{match.date}} {{match.startTime}}</span>
+            </div>
+             <input class="create-match-btn" type="button"  value="+ Agregar Partido" (click)="redirectMatch(bracket)">
           </ng-template>
         </ngb-panel>
       </ngb-accordion>
