--- a/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.html
+++ b/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.html
@@ -86,21 +86,38 @@
           </div>
         </div>
         <div class="button">
+          <span class="details"  >Error en fechas ingresadas <span style="color: rgb(245, 59, 59);">*</span></span>
           <input type="submit" value="Crear Torneo" (click)="addTournament()">
         </div>
       </form>
     </div>
   </div>
-
-
-
-
-
-
 </body>
 
-<ng-template #content let-modal>
+<ng-template #content errorFechas>
   <div class="popup">
+    <p>Error en fechas ingresadas!</p>
+    <button class="close cbtn" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+</ng-template>
+
+<ng-template #content errorFases>
+  <div class="popup">
+    <p>Se requiere al menos una fase!</p>
+    <button class="close cbtn" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+</ng-template>
+
+<ng-template #content errorEquipos>
+  <div class="popup">
+    <p>Se requiere al menos dos equipos en torneo!</p>
+    <button class="close cbtn" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+</ng-template>
+
+<ng-template #content errorRequeridos>
+  <div class="popup">
+    <p>Falta al menos uno de los espacios requeridos!</p>
     <button class="close cbtn" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
 </ng-template>
