--- a/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
+++ b/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <nav class="navbar navbar-expand-lg navbar-light my-navbar ">
       <div class="container-fluid">
-      <a class="navbar-brand fontform" href="#" routerLink= "" >
+      <a class="navbar-brand fontform" href="#" routerLink= "/home" >
           <img src="../../../assets/images/wco-logo.png" width="120" alt="" class="d-inline-block align-middle mr-2"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
