--- a/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.css
+++ b/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.css
@@ -190,6 +190,10 @@ form .input-box2 span.details{
   background-position: center;
 }
 
+::ng-deep snack-bar-container.red-snackbar {
+  background: #F44336;
+  color: white;
+}
 
 
 
