--- a/WCO_WEB/WCO/src/app/components/login/login.component.css
+++ b/WCO_WEB/WCO/src/app/components/login/login.component.css
@@ -104,3 +104,35 @@ form .button{
   max-width: 100%;
 }
 }
+
+.social
+{
+  position: absolute;
+  z-index: 10;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social li
+{
+  list-style: none;
+}
+.social li a
+{
+  display: inline-block;
+  margin-right: 20px;
+  filter: invert(1);
+  transform: scale(0.5);
+  transition: 0.5s;
+}
+.social li a:hover
+{
+  transform: scale(0.5) translateY(-15px);
+}
+
+@media(max-width: 459px){
+  .container .content{
+    flex-direction: column;
+  }
+}
