--- a/WCO_WEB/WCO/src/app/components/match-details/match-details.component.css
+++ b/WCO_WEB/WCO/src/app/components/match-details/match-details.component.css
@@ -1,13 +1,12 @@
 body{
-  height: 100vh;
-  display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   background-color: white;
-
+  height: auto;
+  min-height: 100%;
 }
 .container{
+  height: auto;
   max-width: 1400px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.295);
@@ -16,48 +15,62 @@ body{
   box-shadow: 0 5px 10px rgba(0,0,0,0.20);
 }
 .container .title{
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 500;
-  text-align: center;
-  position: relative;
-  margin-bottom: 2%;
 }
 
 .subtitle{
   font-size: 20px;
   font-weight: 500;
   text-align: center;
-  position: relative;
-  margin-left: 20%;
 }
-.container .title::before{
-  content: "";
-  position: absolute;
-  bottom: 0;
-  height: 3px;
-  width: 210px;
-  border-radius: 5px;
-  background: linear-gradient(135deg, #ffffff, #71aae4, #1277D9);
-}
-.content form .match-details{
-  display: flex;
-  flex-wrap: wrap;
-  margin: 20px 0 12px 0;
-}
-form .match-details .input-box1{
-  margin-bottom: 40px;
-  margin-left: 10%;
-  width: calc(70% / 2);
 
+.info{
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
 }
 
 form .match-details .input-box{
   margin-bottom: 40px;
-  margin-left: 17%;
-  width: calc(50% / 2);
+  width: calc(100%);
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+}
+
+form .match-details .input-box1{
+  margin-bottom: 40px;
+  width: calc(100%);
+  text-align: center;
 
 }
 
+form .match-details .input-box2{
+  margin-bottom: 40px;
+  height: 40px;
+  width: calc(100%);
+  text-align: center;
+
+}
+form .match-details .input-box3{
+  margin-bottom: 70px;
+  margin-left: 40%;
+  height: 40px;
+  width: calc(20%);
+  text-align: center;
+}
+
+form .match-details .input-box4{
+  margin-bottom: 70px;
+  text-align: center;
+}
+
+form .input-box2 span.details{
+  font-weight: 500;
+  margin-right: 5%;
+  margin-left: 5%;
+}
 
 form .input-box span.details{
   display: block;
@@ -67,9 +80,9 @@ form .input-box span.details{
 }
 
 
-.match-details .input-box input{
+.match-details .input-box2 input{
   height: 45px;
-  width: 100%;
+  width: 5%;
   font-size: 16px;
   border-radius: 5px;
   padding-left: 15px;
@@ -78,12 +91,55 @@ form .input-box span.details{
   transition: all 0.3s ease;
 }
 
+.match-details .input-box4 input{
+  height: 45px;
+  width: 30%;
+  font-size: 16px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+}
+
+.match-details .input-box4 .mytable{
+  height: 45px;
+  width: 80%;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+  margin-left: 10%;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+}
+
+.match-details .input-box4 .mytable  td, .match-details .input-box4 .mytable th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.match-details .input-box4 .mytable tr:nth-child(even){background-color: #f2f2f2;}
+
+.match-details .input-box4 .mytable tr:hover {background-color: #ddd;}
+
+.match-details .input-box4 .mytable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #1277D9;
+  color: white;
+  text-align: center;
+}
+
+
 form .button{
   height: 45px;
   margin: 35px 0
 }
 
- /* Aspecto del boton de crear partido */
+
 
  form .button input{
   height: 100%;
@@ -106,6 +162,7 @@ form .button{
  .container{
   max-width: 100%;
 }
+
 }
 
 ::ng-deep snack-bar-container.red-snackbar {
