--- a/WCO_WEB/WCO/src/app/components/login/login.component.css
+++ b/WCO_WEB/WCO/src/app/components/login/login.component.css
@@ -62,6 +62,10 @@ form .input-box span.details{
   text-align: center;
 }
 
+::ng-deep snack-bar-container.red-snackbar {
+  background: #F44336;
+  color: white;
+}
 
 
 .account-details .input-box input{
