--- a/WCO_WEB/WCO/src/app/components/register/register.component.css
+++ b/WCO_WEB/WCO/src/app/components/register/register.component.css
@@ -108,6 +108,11 @@ form .button{
   margin: 35px 0
 }
 
+::ng-deep snack-bar-container.red-snackbar {
+  background: #F44336;
+  color: white;
+}
+
  /* Aspecto del boton de crear partido */
 
  form .button input{
