--- a/WCO_WEB/WCO/src/app/components/register/register.component.html
+++ b/WCO_WEB/WCO/src/app/components/register/register.component.html
@@ -45,7 +45,7 @@
 
           <div class="input-box2">
             <span style="color: rgb(4, 0, 255);" ><a href="https://www.fifa.com/es/terms-of-service">Mostrar Términos y Condiciones</a></span><br>
-            <span><input type="checkbox"> Aceptar Términos y Condiciones</span>
+            <span><input type="checkbox" [checked]="item.check == 'true'"> Aceptar Términos y Condiciones</span>
           </div>
           <div class="input-box2">
             <span>Ya tienes una cuenta? Ingresa <a routerLink="/login" style="color: rgb(4, 0, 255);">aquí</a></span>
