[Update] Login and Register Validations

--- a/WCO_WEB/WCO/src/app/components/login/login.component.css
+++ b/WCO_WEB/WCO/src/app/components/login/login.component.css
@@ -67,6 +67,10 @@ form .input-box span.details{
   color: white;
 }
 
+::ng-deep snack-bar-container.green-snackbar {
+  background: rgb(15, 206, 15);
+  color: white;
+}
 
 .account-details .input-box input{
   height: 45px;
