--- a/WCO_WEB/WCO/src/app/components/login/login.component.html
+++ b/WCO_WEB/WCO/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
             </div>
           </div>
           <div class="button">
-            <input type="submit" value="Iniciar Sesión"routerLink="/home" (click)="addLogin()">
+            <input type="submit" value="Iniciar Sesión" (click)="addLogin()">
           </div>
 
         </form>
