--- a/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
+++ b/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
@@ -6,9 +6,16 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-      </div>
+
+
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><img  class="pull-right" src="../../../assets/images/logout.png" routerLink="/login"  width="35" alt="" class="d-inline-block align-middle mr-2"></li>
+      </ul>
+
+
+
       </div>
   </nav>
 </header>
