--- a/WCO_WEB/WCO/src/app/components/match-details/match-details.component.css
+++ b/WCO_WEB/WCO/src/app/components/match-details/match-details.component.css
@@ -169,3 +169,8 @@ form .button{
   background: #F44336;
   color: white;
 }
+
+::ng-deep snack-bar-container.green-snackbar {
+  background: rgb(15, 206, 15);
+  color: white;
+}
